Fixed the index.html page

--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="homepage.html">
+    <a class="navbar-brand" href="index.html">
         <img src="images/meli.png" alt="Logo" class="shadow rounded-pill" width="100 px">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="homepage.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="projects.html">Projects</a>
@@ -77,7 +77,7 @@
             </p>
             <div class="text-center mt-4 mb-5">
               <button type="button" class="btn btn-outline-dark">
-                <a id="Hi" href="https://vi4qv.csb.app/">Launch Project
+                <a id="Hi" href="https://final-project-shecodes.netlify.app/">Launch Project
                 </a>
               </button>
             </div>
