--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand" href="homepage.html">
         <img src="images/meli.png" class="shadow rounded-pill" alt="logo" width="100 px">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="homepage.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="projects.html">Projects</a>
@@ -59,13 +59,29 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/photo.png" alt="" class="shadow img-fluid" width="900" />
+          <img id="photo" src="images/photo.png" alt="" class="shadow img-fluid" width="900" />
         </div>
       </div>
     </div>
   </div>
+  <h1 class="text-center">SheCodes Certificates</h1>
+  <div id="certificates" class="row">
+  <div class="col-lg-6">
+    <img class="shadow img-fluid" src="images/SheCodes Basic.png" alt="Certificate Basic" width="500">
+    <br />
+    <p>In this course they introduced me to the world of coding, they teach the basics and other things</p>
+  </div>
+  <div class="col-lg-6">
+    <img class="shadow img-fluid" src="images/SheCodes Plus.png" alt="Certificate Plus" width="500">
+    <p>This course teaches what is more advanced JavaScript and Css</p>
+  </div>
+</div>
+<div class="hero">
+  <h1>Contact me!</h1>
+  <a id="email" href="mailto:familiabolivarflorez@gmail.com">familiabolivarflorez@gmail.com</a>
+</div>
   <br /><br />
-    <h5 class="text-center">Coded by Melissa Urrego - <a href="https://github.com/Meliiii-25/MelissaUrrego-Page">Project open source</a></h5>
+    <h5 class="text-center">Coded by Melissa Urrego - <a id="email" href="https://github.com/Meliiii-25/MelissaUrrego-Page">Project open source</a></h5>
     <br /><br />
 </body>
 </html>
